kubernetes/prod/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-prod
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32500
  selector:
    app: cex-api-prod
